# education-python

./: .gitignore  INFO.md  README.md  foo.txt  input.txt  main.py  output.txt  pyproject.toml
edu-modules/: computation.py  greeting.py  main.py
my_package/: __init__.py  constants.py  functions.py
object-oriented-python/: Object Oriented Programming.md  abstract_method.py  classes.py  encapsulation.py  hierarchy.py  inheritance.py  methods.py  overload.py  polymorphism.py  static_class_methods.py
regular-expressions/: file.txt  files_findall.py  findall.py  group_extraction.py  matching_email.py  regular_exp.py  regular_exp2.py  regular_exp3.py
